fix/fix-contentOverlaping

--- a/styles/MarsGalaxy.module.css
+++ b/styles/MarsGalaxy.module.css
@@ -109,6 +109,6 @@
 
 @media screen and (max-height: 900px) {
   .centerize {
-    top: 230%;
+    top: 235%;
   }
 }
